# wilson

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
cmake/: CPM.cmake
dat/: CMakeLists.txt  genc.sh  genh.sh  land_simplified.idx
inc/wilson/: chain_sink.h  chain_stitcher.h  graticule.h  plane.h  projection.h  projections.h  quaternion.h  r2shape.h  sierpinski.h  simplify.h  strutil.h  testing.h  timing.h
inc/wilson/dat/: lion.h  lion_data.h
inc/wilson/geometry/: barycentric.h  chain_stitcher.h  plane.h  quaternion.h  r2shape.h  region.h  sierpinski.h  simplify.h  transform.h  vertex_sink.h
inc/wilson/graphics/: compositor.h  inset.h  pixbuffer.h  pixel.h  rasterize.h  sdlapp.h
inc/wilson/gui/: colors.h
inc/wilson/proj/: cubic.h  equirectangular.h  gnomonic.h  orthographic.h
inc/wilson/projection/: all.h  clipping.h  cubic.h  equirectangular.h  gnomonic.h  orthographic.h  projection.h
inc/wilson/util/: fixed.h
src/: CMakeLists.txt  projection.cc  wilson.cc
test/: CMakeLists.txt  fixed_test.cc  rasterize_test.cc  test_main.cc  wilson_test.cc
